--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <artifactId>springboot-cloud-center</artifactId>
     <version>1.0.0</version>
 
+    <!-- spring cloud -->
     <dependencyManagement>
         <dependencies>
             <dependency>
